For more details and developer visible changes see the ChangeLog file.
For a list of compatibility related changes see the UPGRADE file.


--------------------------------------------------------------------------------
Version <release> - <codename> released on <releaseDate>

New Hardware Support
- Motorola RF Switches (Wireless Controllers)

Enhancements
- DHCP fingerprints sharing now allows submitter to send computer name, user-
  agent and a contact email to help us identify the devices better (#983)
- Updated Developer documentation regarding how to support new wireless hardware
- Meru module now supports firmware version identification
- Improvements in the logrotate script (#1198)
- MAC address format xxxx-xxxx-xxxx supported in our FreeRADIUS' module
- New DHCP fingerprint for Cisco SPA series IP Phone, Mikrotik, Freebox,
  AeroHive Hive AP, Ubuntu Server, Suse Linux Desktop 11 and Synology NAS

Bug Fixes
- Fixed important Nortel support regressions (introduced in 2.1.0: #1183, #1195)
- Wired 802.1X and MAC Authentication fixes in Network Devices Guide
- Fixed an issue with pfcmd-initiated VLAN re-evaluation if you assign VLANs 
  based on a client's connection-type (which is not the default)
- Fixed DHCP fingerprint sharing upload form
- Fixed Web Admin which referred to an inexistent Meru MC3000 module (it was 
  renamed Meru::MC in 2.0.1)
- Fixed an issue with the Meru module: If the controller sent SNMP traps to 
  PacketFence a thread would crash. Hopefully this configuration is not 
  required and is rarely done. Regression prevention tests have been added.
- Minor fixes to the Administration Guide (#743)

Translations
- New German (de) translation (Thanks to Tino Matysiak of Meetyoo Conferencing)

--------------------------------------------------------------------------------
Version 2.1.0 released on 2011-03-03

New Hardware Support
- Added Avaya as rebranded Nortel's
- Support for Nortel's ERS5500 with firmware 6.x