@@ -403,7 +403,7 @@ EOT
 
 [registration.auth]
 type=multi
-options=email|local|ldap|radius
+options=email|local|ldap|radius|kerberos
 description=<<EOT
 Method or Methods by which registering nodes will be authenticated.
 Templates for LDAP and local are available at
